# banderdoc-search

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py  schemas.py
